[build-system]
requires = [
    "setuptools>=67.6.0",
    "wheel>=0.40.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pod-porter"
dynamic = ["readme"]
version = "1.0.0"
requires-python = ">=3.10"
description = "Like Helm but for Container Compose Files"
keywords = [
    "docker",
    "podman",
    "compose",
    "podman-compose",
    "helm",
    "docker-compose",
    "porter",
    "pod-porter",
]
authors = [
  { name="Benjamin P. Trachtenberg", email="e_ben_75-python@yahoo.com" },
]
maintainers = [
  {name = "Benjamin P. Trachtenberg", email = "e_ben_75-python@yahoo.com"},
]
license = "MIT"
license-files = [
    "LICENSE"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",]

dependencies = [
    "jinja2~=3.1.6",
    "jsonschema[format-nongpl]>=4.26.0",
    "pyyaml~=6.0.3",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "black",
    "myst-parser",
    "pylint",
    "pytest-cov",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-mermaid",
    "tomli; python_version < '3.11'",
]

[project.urls]
Documentation = "https://pod-porter.readthedocs.io/en/latest/"
Source = "https://github.com/btr1975/pod-porter"
Tracker = "https://github.com/btr1975/pod-porter/issues"


[project.scripts]
pod-porter = "pod_porter:cli"


[tool.setuptools.packages.find]
include = [
    "pod_porter*",
]

# Add or remove file extensions to include the data
[tool.setuptools.package-data]
"*" = ["*.j2", "*.json"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "place_holder: marks tests as place_holder (deselect with -m 'not place_holder')",
]

[tool.coverage.run]
command_line= "-m pytest -vvv"

[tool.coverage.report]
include = [
    "pod_porter/*"
]
fail_under = 70

[tool.pylint]
max-line-length = 120
# This allows pylint to complain on FIXME and XXX notes
notes = [
    "FIXME",
    "XXX",
]
fail-under = 9.9

[tool.black]
line-length = 120

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    "docs",
]

# UV settings reference https://docs.astral.sh/uv/reference/settings/

[tool.uv]
keyring-provider = "subprocess"
native-tls = true
